- move data access operations to seperate class to better  adhere to single responsibility principle - add user message after performing CRUD operations

--- a/ReadingTracker/Views/Books/Index.cshtml
+++ b/ReadingTracker/Views/Books/Index.cshtml
@@ -27,6 +27,13 @@
     </div>
 <br />
 
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-info" id="message">
+        @TempData["Message"]
+    </div>
+}
+
 
 <table class="table table-hover">
     <thead>
