re-factor pacakages to adhere to package principles

--- a/ReadingTracker/Views/Search/Search.cshtml
+++ b/ReadingTracker/Views/Search/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ReadingTracker.Models.Book>
+﻿@model IEnumerable<ReadingTracker.Domain.Book>
 
 @{
     ViewData["Title"] = "Search Results";
