example of faulty refactor

--- a/ReadingTracker/Views/_ViewImports.cshtml
+++ b/ReadingTracker/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ReadingTracker
 @using ReadingTracker.Models
+@using ReadingTracker.DataAccess
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
