--- a/ReadingTracker/Views/Books/Index.cshtml
+++ b/ReadingTracker/Views/Books/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ReadingTracker.Models.Book>
+﻿@model IEnumerable<ReadingTracker.DataAccess.Book>
 
 @{
     ViewData["Title"] = "Books";
