Improve RCM Metrics
Refactor to adhere better to Stable Dependencies principle, e.g. Make Domain more abstract, e.g. Make D' closer to zero.

--- a/ReadingTracker/Views/Books/Index.cshtml
+++ b/ReadingTracker/Views/Books/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ReadingTracker.Domain.Book>
+﻿@model IEnumerable<ReadingTracker.Data.Book>
 
 @{
     ViewData["Title"] = "Books";
