--- a/ReadingTracker/Views/_ViewImports.cshtml
+++ b/ReadingTracker/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ReadingTracker
 @using ReadingTracker.Models
 @using ReadingTracker.Domain
+@using ReadingTracker.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
