--- a/ReadingTracker/Views/Books/Index.cshtml
+++ b/ReadingTracker/Views/Books/Index.cshtml
@@ -33,6 +33,12 @@
         @TempData["Message"]
     </div>
 }
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger" id="message">
+        @TempData["ErrorMessage"]
+    </div>
+}
 
 
 <table class="table table-hover">
