--- a/ReadingTracker/Views/Books/Edit.cshtml
+++ b/ReadingTracker/Views/Books/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ReadingTracker.Data.Book
+﻿@model BookWithGenreList
 
 @{
     ViewData["Title"] = "Edit";
@@ -38,12 +38,20 @@
                 <span asp-validation-for="PageCount" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Genres" class="control-label"></label>
+                <select asp-for="GenreId" asp-items="@(new SelectList(Model.Genres, "Id", "Name", Model.GenreId))" class="form-control">
+                    <option value="">Select Genre</option>
+                </select>
+                <span asp-validation-for="Genres" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
                 <input asp-for="Rating" class="form-control" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <br/>
             <div class="form-group">
+                <input type="hidden" asp-for="GenreId" />
                 <input type="submit" value="Save" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-secondary">Back to List</a>
             </div>
