--- a/ReadingTracker/Views/Shared/_Layout.cshtml
+++ b/ReadingTracker/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Statistic" asp-action="Index">Statistics</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Genre" asp-action="Index">Genres</a>
+                        </li>
                     </ul>
                 </div>
             </div>
