--- a/ReadingTracker/Views/Statistic/Index.cshtml
+++ b/ReadingTracker/Views/Statistic/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Statistics";
 }
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
 <h1>Statistics</h1>
 
 <hr />
@@ -27,15 +30,71 @@
 
 @if (Model.SelectedYear.HasValue)
 {
-    <h4><b><u>@Model.SelectedYear Statistics</u></b></h4>
-    <h5><b>Total Books Read: </b>@Model.TotalBooksRead</h5>
-    <h5><b>Average Rating: </b>@(Model.AverageRating.HasValue ? Math.Round(Model.AverageRating.Value, 2) : (double?)null)</h5>
-    <h5><b>Average Days Per Book: </b>@(Model.AverageDaysPerBook.HasValue ? Math.Round(Model.AverageDaysPerBook.Value, 2) : (double?)null)</h5>
-    <h5><b>Total Pages Read: </b>@string.Format("{0:N0}", Model.TotalPagesRead)</h5>
-    <h5><b>Top Author: </b>@Model.TopAuthor</h5>
-  
+    <div class="row">
+        <div class="col-md-4">
+            <h4><b><u>@Model.SelectedYear Statistics</u></b></h4>
+            <h5><b>Total Books Read: </b>@Model.TotalBooksRead</h5>
+            <h5><b>Average Rating: </b>@(Model.AverageRating.HasValue ? Math.Round(Model.AverageRating.Value, 2) : (double?)null)</h5>
+            <h5><b>Average Days Per Book: </b>@(Model.AverageDaysPerBook.HasValue ? Math.Round(Model.AverageDaysPerBook.Value, 2) : (double?)null)</h5>
+            <h5><b>Total Pages Read: </b>@string.Format("{0:N0}", Model.TotalPagesRead)</h5>
+            <h5><b>Top Author: </b>@Model.TopAuthor</h5>
+        </div>
+        <div class="col-md-5">
+            <div style=" width: 100%; height: 100%;">
+                <canvas id="genrePieChart"></canvas>
+            </div>
+        </div>
+    </div>
 }
 else
 {
     <p>No data available for the selected year.</p>
 }
+
+
+<script>
+    var statisticData = @Html.Raw(Json.Serialize(Model));
+    var labels = [];
+    var data = [];
+    var colors = [];
+
+    Object.keys(statisticData.genreBreakdown).forEach(function (key) {
+        var tuple = statisticData.genreBreakdown[key];
+        var percentage = tuple.item1;
+        var color = tuple.item2;
+
+        labels.push(key);
+        data.push(percentage);
+        colors.push(color);
+    });
+
+    var ctx = document.getElementById('genrePieChart').getContext('2d');
+    var genrePieChart = new Chart(ctx, {
+        type: 'doughnut',
+        data: {
+            labels: labels,
+            datasets: [{
+                data: data,
+                backgroundColor: colors,
+            }],
+        },
+        options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            plugins: {
+                title: {
+                    display: true,
+                    text: 'Genre Breakdown',
+                    font : {size : 24 }
+                },
+                legend: {
+                    display: true,
+                    position: 'right',
+                    labels: {
+                        font: { size: 14 }
+                    }
+                }
+            }
+        },
+    });
+</script>
